src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT010.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    RaisesWithoutException: ~
  location:
    row: 5
    column: 9
  end_location:
    row: 5
    column: 22
  fix: ~
  parent: ~

