src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT011_replace_broad_exceptions.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    RaisesTooBroad: ZeroDivisionError
  location:
    row: 12
    column: 23
  end_location:
    row: 12
    column: 40
  fix: ~
  parent: ~

