src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT017.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    AssertInExcept: e
  location:
    row: 19
    column: 8
  end_location:
    row: 19
    column: 37
  fix: ~
  parent: ~

