src/rules/flake8_pytest_style/snapshots/ruff__rules__flake8_pytest_style__tests__PT020.snap
---
source: src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    DeprecatedYieldFixture: ~
  location:
    row: 14
    column: 1
  end_location:
    row: 14
    column: 23
  fix: ~
  parent: ~
- kind:
    DeprecatedYieldFixture: ~
  location:
    row: 19
    column: 1
  end_location:
    row: 19
    column: 21
  fix: ~
  parent: ~

